// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with caption 1`] = `
<div
  className="title monday-style-menu-title"
  data-testid="menu-title"
>
  <label
    className="caption monday-style-menu-title__caption captionBottom monday-style-menu-title__caption--bottom"
    data-testid="menu-title"
  >
    my title
  </label>
</div>
`;

exports[`renders correctly with custom class name 1`] = `
<div
  className="title monday-style-menu-title dummy-class-name"
  data-testid="menu-title"
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  className="title monday-style-menu-title"
  data-testid="menu-title"
/>
`;
